--- a/EyeRecorder/RecorderApp/Views/QuickResultsView.xaml
+++ b/EyeRecorder/RecorderApp/Views/QuickResultsView.xaml
@@ -9,6 +9,7 @@
 
     <Window.Resources>
         <utilities:FilenameConverter x:Key="FilenameConverter" />
+        <utilities:StringToURI x:Key="StringToURI"/>
     </Window.Resources>
     <Grid>
         <!--<Rectangle Width="5" Fill="#72c480
@@ -104,56 +105,34 @@
                 </Button.Resources>
                 Back to Main Menu
             </Button>
-            <StackPanel Orientation="Horizontal">
-
-
-                <MediaElement x:Name="VidPlayer" Source="{Binding ElementName=lbClips,Path=SelectedItem.filePath}"
-                        HorizontalAlignment="Left" Height="245" Margin="100,0,0,0" Width="384" 
-                                  MediaFailed="VidPlayer_MediaFailed" Visibility="Hidden" MediaOpened="VidPlayer_MediaOpened"/>
-                <!--
-                <ListBox x:Name="lbClips" ItemsSource="{Binding ClipData}" MinHeight="50" MaxHeight="240" Width="auto" Margin="100,0,0,0" 
-                             SelectedItem="{Binding SelectedItem}" HorizontalAlignment="Center" VerticalAlignment="Center" BorderBrush="{x:Null}" Background="#FF222629" Foreground="White">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Margin="0,10,10,0">
-                                <MediaElement Width="100" Height="100" Source="{Binding Path=imgPath}"/>
-                                <TextBlock Text="{Binding fileName}"/>
-                                <TextBlock Text="{Binding rank}"/>
-                                <CheckBox/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
- -->
-                <ListBox x:Name="lbClips" ItemsSource="{Binding ClipData}" MinHeight="50" MaxHeight="440" Width="800" Margin="100,0,0,0" HorizontalContentAlignment="Stretch" 
-                             SelectedItem="{Binding SelectedItem}" BorderBrush="{x:Null}" Background="#FF222629" Foreground="White">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Border Name="border" BorderBrush="Gray" BorderThickness="1" Padding="5" Margin="15">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition />
-                                        <ColumnDefinition />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <MediaElement Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Width="200" Height="200" Source="{Binding Path=imgPath}"/>
-                                    <TextBlock Grid.Row="0" Grid.Column="1" Text="File Name:"/>
-                                    <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Path=fileName}"/>
-                                    <TextBlock Grid.Row="1" Grid.Column="1" Text="Rank:"/>
-                                    <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Path=rank}"/>
-                                    <TextBlock Grid.Row="2" Grid.Column="1" Text="Rating:"/>
-                                    <CheckBox Grid.Row="2" Grid.Column="2"/>
-                                </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+            <StackPanel>
                 
+                <ItemsControl x:Name="lbClips" ItemsSource="{Binding ClipData}" Grid.IsSharedSizeScope="True" Margin="30,10,30,0">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="5">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" SharedSizeGroup="one" />
+                                    <RowDefinition Height="Auto" SharedSizeGroup="two" />
+                                </Grid.RowDefinitions>
+                                <MediaElement x:Name="clipEl" Width="200" Height="200" Source="{Binding filePath, Converter={StaticResource StringToURI}}" LoadedBehavior="Manual" 
+                                              MouseEnter="clipEl_MouseEnter" Loaded="clipEl_Loaded" ScrubbingEnabled="True" />
+                                <TextBlock Grid.Row="1" Text="{Binding Path=fileName}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+
+                <MediaElement x:Name="PreviewClip" Width="200" Height="200" Source="{Binding MergedClip.filePath, Converter={StaticResource StringToURI}}" 
+                              Loaded="PreviewClip_Loaded" LoadedBehavior="Manual" MouseLeftButtonDown="PreviewClip_MouseLeftButtonDown" MouseEnter="PreviewClip_MouseEnter"
+                              ScrubbingEnabled="True"/>
+
 
             </StackPanel>
             
