--- a/EyeRecorder/RecorderApp/Views/MainWindow.xaml
+++ b/EyeRecorder/RecorderApp/Views/MainWindow.xaml
@@ -1,35 +1,19 @@
 ﻿<Window x:Class="RecorderApp.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/" 
+        xmlns:prism="http://prismlibrary.com/" xmlns:fa="http://schemas.fontawesome.io/icons/"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="450" Width="800" 
-        MinHeight="30" MinWidth="250" WindowStyle="None" ResizeMode="CanMinimize" WindowState="Maximized"
-        WindowStartupLocation="CenterScreen">
-
-    <Window.Resources>
-        <Style x:Key="RectBorderStyle" TargetType="Rectangle">
-            <Setter Property="Focusable" Value="False" />
-            <Setter Property="Fill" Value="Transparent" />
-            <Setter Property="Tag" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-            <EventSetter Event="MouseLeftButtonDown" Handler="Resize_Init"/>
-            <EventSetter Event="MouseLeftButtonUp" Handler="Resize_End"/>
-            <EventSetter Event="MouseMove" Handler="Resizeing_Form"/>
-        </Style>
-    </Window.Resources>
+        Title="{Binding Title}" Height="550" Width="655"
+        WindowStartupLocation="CenterScreen" >
 
     <Grid>
-
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="44*"/>
-            <ColumnDefinition Width="92*"/>
-            <ColumnDefinition Width="142*"/>
-            <ColumnDefinition Width="47*"/>
-            <ColumnDefinition Width="300*"/>
+            <ColumnDefinition Width="37*"/>
+            <ColumnDefinition Width="483*"/>
         </Grid.ColumnDefinitions>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" Grid.ColumnSpan="5" />
-        <Rectangle Width="15" Fill="#FFCEE3D7" HorizontalAlignment="Left"/>
-        <StackPanel Grid.ColumnSpan="5" Background="#FF2E3337">
+        <ContentControl prism:RegionManager.RegionName="ContentRegion" Grid.ColumnSpan="3" Margin="0,0,0,0.5" />
+        <Rectangle Width="15" Fill="#FFCEE3D7" HorizontalAlignment="Left" Margin="0,0,0,0.5"/>
+        <StackPanel Grid.ColumnSpan="2" Margin="0,0,0,0.5">
             <StackPanel.Resources>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Margin" Value="0,10,0,0"/>
@@ -42,32 +26,14 @@
                     <Setter Property="Margin" Value="0,25,0,5"/>
                 </Style>
             </StackPanel.Resources>
+            <StackPanel.Background>
+                <ImageBrush ImageSource="/Assets/mainBG.png"/>
+            </StackPanel.Background>
 
             <!-- see selected path
             
             <Label Content="Eyegaze Recorder" Margin="5,10,0,5" Height="30" VerticalAlignment="Top"/>
             -->
-            <Label Content="Start Experiment" Width="400" Foreground="White" Margin="0,50,0,5"/>
-            <Rectangle Fill="#FFD0CFCF" Width="450" Height="1"/>
-
-            <TextBlock x:Name="txtSelectedPath" Width="350">
-                <Run Text="{Binding SelectedPath}" FontStyle="Italic"/>
-            </TextBlock>
-            <Button x:Name="openFile" Command="{Binding OpenCommand}" FontFamily="Segoe UI Semibold" RenderTransformOrigin="0.5,0.5" Background="#FFB3B3B3" Foreground="White" Content="Select video" BorderBrush="#FFE0E3EB" UseLayoutRounding="False" FontWeight="Bold">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
-
-            <Button Command="{Binding NextWindow}" FontWeight="Bold" FontFamily="Segoe UI Semibold" Background="#FF72C480" Foreground="White" Content="Start playing" BorderBrush="#FFE0E3EB">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
 
             <Label Content="Calibrate Device" Width="400" Foreground="White"/>
             <Rectangle Fill="#FFD0CFCF" Width="450" Height="1"/>
@@ -78,6 +44,46 @@
                     </Style>
                 </Button.Resources>
             </Button>
+
+
+            <Label Content="Start Experiment" Width="400" Foreground="White"/>
+            <Rectangle Fill="#FFD0CFCF" Width="450" Height="1"/>
+
+            <TextBlock x:Name="txtSelectedPath" Width="350">
+                <Run Text="{Binding SelectedPath}" FontStyle="Italic"/>
+            </TextBlock>
+            <WrapPanel HorizontalAlignment="Center">
+                <Button x:Name="openFile" Command="{Binding OpenCommand}" FontFamily="Segoe UI Semibold" RenderTransformOrigin="0.5,0.5" Background="#FFB3B3B3" 
+                    Foreground="White" Content="Select video" BorderBrush="#FFE0E3EB" UseLayoutRounding="False" FontWeight="Bold" Width="120">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+
+                <Button Command="{Binding ConfigureCommand}" Width="25" Height="25" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,15,0,0" Foreground="White" Background="#FFB3B3B3">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+
+                    <fa:ImageAwesome Icon="Cog" Height="16" Width="12" Foreground="AliceBlue" VerticalAlignment="Center"/>
+                </Button>
+
+            </WrapPanel>
+
+            <Button x:Name="btn_start" Command="{Binding NextWindow}" FontWeight="Bold" FontFamily="Segoe UI Semibold" Background="#FF72C480" Foreground="White" 
+                    Content="Start playing" BorderBrush="#FFE0E3EB">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+            
 
 
             <Label Content="Generate Results" Width="400" Foreground="White"/>
@@ -96,32 +102,23 @@
                     </Style>
                 </Button.Resources>
             </Button>
+
+            <Button Command="{Binding MultiUserResWindow}" FontFamily="Segoe UI Semibold" Background="#FF72C480" Foreground="White" BorderBrush="#FFE0E3EB" 
+                    Content="Multi-user Data" FontWeight="Bold">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button Command="{Binding LoadClipsWindow}" FontFamily="Segoe UI Semibold" Background="#FF72C480" Foreground="White" BorderBrush="#FFE0E3EB" 
+                    Content="History" FontWeight="Bold">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </StackPanel>
-
-        <!--here-->
-        <Grid MouseDown="StackPanel_MouseDown"  VerticalAlignment="Top" Margin="0,0,-2,0"  Background="#FF222629" Grid.ColumnSpan="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Image x:Name="HeaderIcon" Grid.Column="0" Width="20" Height="20" Margin="5, 4, 5, 4" HorizontalAlignment="Left" />
-            <TextBlock x:Name="HeaderTitle" Grid.Column="1" Margin="5" TextAlignment="Left" Foreground="#FFFFFF" FontSize="13" HorizontalAlignment="Left" />
-            <StackPanel Grid.Column="2" VerticalAlignment="Top"  Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button x:Name="MinimizeButton" Style="{DynamicResource MinimizeButtonStyle}" Click="MinimizeWindow" KeyboardNavigation.IsTabStop="False" />
-                <Button x:Name="MaximizeButton" Style="{DynamicResource MaximizeButtonStyle}" Click="MaximizeClick" KeyboardNavigation.IsTabStop="False" />
-                <Button x:Name="CloseButton"  Style="{DynamicResource CloseButtonStyle}" Click="CloseButton_Click" KeyboardNavigation.IsTabStop="False" />
-            </StackPanel>
-        </Grid>
-        <Rectangle x:Name="leftSizeGrip" Width="7" HorizontalAlignment="Left" Cursor="SizeWE" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle x:Name="rightSizeGrip" Width="7" HorizontalAlignment="Right" Cursor="SizeWE" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle x:Name="topSizeGrip" Height="7" VerticalAlignment="Top" Cursor="SizeNS" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle x:Name="bottomSizeGrip" Height="7" VerticalAlignment="Bottom" Cursor="SizeNS" Style="{StaticResource RectBorderStyle}" />
-        <!--  Corners  -->
-        <Rectangle Name="topLeftSizeGrip" Width="7" Height="7" HorizontalAlignment="Left" VerticalAlignment="Top" Cursor="SizeNWSE" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle Name="bottomRightSizeGrip" Width="7" Height="7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Cursor="SizeNWSE" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle Name="topRightSizeGrip" Width="7" Height="7" HorizontalAlignment="Right" VerticalAlignment="Top" Cursor="SizeNESW" Style="{StaticResource RectBorderStyle}" />
-        <Rectangle Name="bottomLeftSizeGrip" Width="7" Height="7" HorizontalAlignment="Left" VerticalAlignment="Bottom" Cursor="SizeNESW" Style="{StaticResource RectBorderStyle}" />
-
     </Grid>
 </Window>
